--- a/src/styles/Resume.scss
+++ b/src/styles/Resume.scss
@@ -1,4 +1,5 @@
 @use '../styles/mixins/mixins' as *;
+@use './variables/variables' as *;
 
 .resume-container {
     display: flex;
@@ -6,8 +7,20 @@
     box-shadow: 0 13px 27px -5px rgba(50, 50, 93, .1), 0 8px 16px -8px rgba(0, 0, 0, .25);
     // height: 29.7cm; desktop
     // width: 21cm; desktop
-
+    gap: 10px;
     height: 24.7cm;
     width: 14cm;
+}
+
+.resume-experience, .resume-skills {
+    padding: 0px 15px;
+
+    h2 {
+        font-size: $size-16;
+    }
+}
+
+hr {
+    margin-top: 0;
 }
 
